--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "typescript": "^5.8.3"
   },
@@ -7,6 +8,7 @@
     "@elevenlabs/elevenlabs-js": "^2.7.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ws": "^8.18.3"
   }
 }
