--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "@types/ws": "^8.18.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
