--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "openai": "^5.11.0",
     "ws": "^8.18.3"
   },
   "scripts": {
