--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@types/node": "^24.1.0",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.7.0",
@@ -13,9 +13,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.11.0",
+    "twilio": "^5.8.0",
     "ws": "^8.18.3"
   },
   "scripts": {
-    "dev": "ts-node app/bootstrap/server.ts"
+    "dev": "ts-node app/bootstrap/twilio.ts"
   }
 }
