--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.11.0",
+    "tsconfig-paths": "^4.2.0",
     "twilio": "^5.8.0",
     "ws": "^8.18.3"
   },
